UI for predictions

--- a/WooCommerce-Tool/WooCommerce-Tool.csproj
+++ b/WooCommerce-Tool/WooCommerce-Tool.csproj
@@ -17,7 +17,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetProjects.WpfToolkit.DataVisualization" Version="6.1.94" />
     <PackageReference Include="Exceptionless" Version="4.6.2" />
+    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+    <PackageReference Include="Microsoft.ML" Version="1.7.1" />
+    <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.7.1" />
+    <PackageReference Include="MvvmLight" Version="5.4.1.1" />
+    <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
     <PackageReference Include="WooCommerceNET" Version="0.8.4" />
   </ItemGroup>
 
