--- a/WooCommerce-Tool/WooCommerce-Tool.csproj
+++ b/WooCommerce-Tool/WooCommerce-Tool.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Exceptionless" Version="4.6.2" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="Microsoft.ML" Version="1.7.1" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="1.7.1" />
     <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.7.1" />
     <PackageReference Include="MvvmLight" Version="5.4.1.1" />
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
